@@ -16,4 +16,7 @@
     <remote-id type="cpan-module">File::HomeDir::Unix</remote-id>
     <remote-id type="cpan-module">File::HomeDir::Windows</remote-id>
   </upstream>
+  <use>
+  	<flag name="xdg">Ensure XDG Semantics for returned paths via x11-misc/xdg-user-dirs</flag>
+  </use>
 </pkgmetadata>
