@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/File-HomeDir
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-HomeDir/ChangeLog,v 1.89 2013/09/03 18:38:08 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-HomeDir/ChangeLog,v 1.90 2013/12/22 10:21:28 zlogene Exp $
+
+*File-HomeDir-1.0.0-r1 (22 Dec 2013)
+
+  22 Dec 2013; Mikle Kolyada <zlogene@gentoo.org> +File-HomeDir-1.0.0-r1.ebuild,
+  metadata.xml:
+  Revision bump: EAPI=5; Implement new 'xdg' use flag wrt bug #486938. Thanks to
+  Kent Fredric for discovering this issue.
 
   03 Sep 2013; Mikle Kolyada <zlogene@gentoo.org> File-HomeDir-1.0.0.ebuild:
   alpha/amd64/ia64/ppc/ppc64/sparc/x86 stable wrt bug #449584
